# AubeDroniste

./: .gitignore  ARCHITECTURE.md  README.md  app.py  aube_push.py  auth.py  config.py  db.py  i18n.py  mailer.py  payments.py  pdfgen.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run.sh  schema.sql  security.py  seed.py  seed_fake_pilots.py  seo.py  services.py  wsgi.py
deploy/: README.md  aubedroniste.service  aubepilot.service  deploy.sh  go-live-stripe.sh  healthcheck.sh  nginx.conf.example  pam.example  update.sh
migrations/: 2026_05_07_rebrand_droniste_to_pilot.sql  2026_05_09_late_cancellation_fee.sql  2026_05_21_name_lock_and_doc_visibility.sql  2026_05_22_devis_revisions.sql  2026_05_23_packages_deliverables.sql  2026_05_24_portfolio.sql
mobile/: .flutter-plugins-dependencies 2  README.md  flutter_launcher_icons.yaml  pubspec.yaml
scripts/: dev_setpw.py  release_stale_bookings.py  seed.py  send_test_email.py
templates/: _map.html  admin_certifications.html  admin_disputes.html  admin_name_changes.html  base.html  booking_detail.html  dashboard.html  error.html  index.html  legal_cookies.html  legal_notice.html  legal_privacy.html  legal_terms.html  login.html  mission_create.html  mission_detail.html  missions_search.html  name_change_request.html  pilot_become.html  pilot_detail.html  pilot_edit.html  pilot_packages.html  pilot_portfolio.html  pilots_search.html  register.html  stripe_fake_checkout.html  stripe_fake_onboarding.html
tests/: conftest.py  test_access_control.py  test_auth_register.py  test_bids.py  (+7 more)
(+31 files in other folders)
